<resources>
    <string name="app_name">АКБ</string>
    <string name="title_banek_random">Случайный анек</string>
    <string name="error_general">Произошла ошибка</string>
    <string name="retry">Ещё раз</string>
    <string name="menu_reload">Ещё</string>
    <string name="menu_random_anek">Случайный анек</string>
    <string name="menu_about">О приложении</string>
    <string name="title_about">О приложении</string>
    <string name="about_text1">Анекдоты категории Б</string>
    <string name="about_version">Версия %1$s (%2$s)</string>
    <string name="about_vk">VK</string>
    <string name="about_web">baneks.ru</string>
    <string name="empty" />
    <string name="menu_share">Поделиться</string>
    <string name="share_text">%1$s\n\n#АКБ\nhttps://play.google.com/store/apps/details?id=me.ilich.baneks</string>
    <string name="dialog_share">Поделиться анеком</string>
    <string name="anek_rating">Понравилось: %1$s</string>
    <string name="anek_rate_up">Мне нравится! :)</string>
    <string name="anek_rate_down">Разонравилось… :(</string>
    <string name="menu_aneks_top">Лучшие анеки</string>
    <string name="top_pos">#%1$s</string>
    <string name="title_top_aneks">Лучшие</string>
    <string name="title_anek_top">Топ #%1$s</string>
    <string name="anek_moar">Ещё</string>
    <array name="banek_says">
        <item>Ого-го!</item>
        <item>Щекотно!</item>
        <item>Ну ты и неприятный!</item>
        <item>Противный!</item>
        <item>У тебя телефон видно, в курсе?</item>
    </array>
</resources>
