<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/content_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/about_text1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/t_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp" />

        <Button
            android:id="@+id/b_vk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_vk" />

        <Button
            android:id="@+id/b_web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_web" />

    </LinearLayout>

</FrameLayout>