<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/content_padding">

    <FrameLayout
        android:id="@+id/container_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <android.support.v4.widget.ContentLoadingProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/container_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/t_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/error_general"
            android:textSize="18sp" />

        <Button
            android:id="@+id/b_reaload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retry" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/container_success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/t_anek_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/t_anek_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/t_anek_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <Button
                    android:id="@+id/b_anek_rate_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/anek_rate_up" />

                <Button
                    android:id="@+id/b_anek_rate_down"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/anek_rate_down" />

                <Button
                    android:id="@+id/b_anek_moar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/anek_moar" />

            </LinearLayout>

        </ScrollView>

    </FrameLayout>

</RelativeLayout>